Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email
Summary: Reading email advancing with "space" doesn't jump to next unread at end of cu...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: Git (master)
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-21 08:57 UTC by dag
Modified: 2016-10-05 11:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dag 2016-09-21 08:57:26 UTC
I have the habit of scrolling through emails using the "space" button and this very conveniently advaced to next email when pressing space at the end of one email. This doesn't happen any more and I consider that a regression.


Reproducible: Always

Steps to Reproduce:
1. Find a folder with at least two unread emails
2. Open the first one and scroll down using the space bar til end of email
3. Press the spacebar again

Actual Results:  
Nothing happens

Expected Results:  
Jump to next unread email


Kmail version in the Fedora RPM is 5.3.0
Comment 1 Laurent Montel 2016-09-28 19:00:49 UTC
I confirm it.
It's a regression when I ported to qtwebengine.
I will investigate to fix it soon.
Comment 2 Laurent Montel 2016-10-05 06:57:40 UTC
Git commit 6b8674631b71e7ebb67ad7cfec3bf0aa4ea640de by Montel Laurent.
Committed on 05/10/2016 at 06:55.
Pushed by mlaurent into branch 'master'.

Fix Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email

M  +1    -1    CMakeLists.txt
M  +3    -2    messageviewer/src/viewer/viewer.cpp
M  +2    -1    messageviewer/src/viewer/viewer.h
M  +1    -0    messageviewer/src/viewer/viewer_p.cpp
M  +1    -0    messageviewer/src/viewer/viewer_p.h
M  +15   -7    messageviewer/src/viewer/webengine/mailwebengineview.cpp
M  +3    -1    messageviewer/src/viewer/webengine/mailwebengineview.h

http://commits.kde.org/messagelib/6b8674631b71e7ebb67ad7cfec3bf0aa4ea640de
Comment 3 Laurent Montel 2016-10-05 07:05:02 UTC
Git commit 5c3e79d60a73567c67124ad2b58334996ed83f06 by Montel Laurent.
Committed on 05/10/2016 at 07:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email

FIXED-IN: 5.4.0

M  +1    -1    CMakeLists.txt
M  +8    -1    src/kmmainwidget.cpp
M  +1    -0    src/kmmainwidget.h

http://commits.kde.org/kmail/5c3e79d60a73567c67124ad2b58334996ed83f06
Comment 4 Laurent Montel 2016-10-05 11:15:18 UTC
Git commit 31bdc626f6e4cf4a4ff55f01e2d9c415f4996cfa by Montel Laurent.
Committed on 05/10/2016 at 10:49.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email
(cherry picked from commit 6b8674631b71e7ebb67ad7cfec3bf0aa4ea640de)

M  +3    -2    messageviewer/src/viewer/viewer.cpp
M  +2    -1    messageviewer/src/viewer/viewer.h
M  +1    -0    messageviewer/src/viewer/viewer_p.cpp
M  +1    -0    messageviewer/src/viewer/viewer_p.h
M  +17   -5    messageviewer/src/viewer/webengine/mailwebengineview.cpp
M  +3    -1    messageviewer/src/viewer/webengine/mailwebengineview.h

http://commits.kde.org/messagelib/31bdc626f6e4cf4a4ff55f01e2d9c415f4996cfa
Comment 5 Laurent Montel 2016-10-05 11:16:01 UTC
Git commit bd04911af38d9aaa5d43d51b8b07a9101084f8ea by Montel Laurent.
Committed on 05/10/2016 at 11:15.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email

FIXED-IN: 5.3.2

M  +8    -1    kmail/src/kmmainwidget.cpp
M  +1    -0    kmail/src/kmmainwidget.h

http://commits.kde.org/kdepim/bd04911af38d9aaa5d43d51b8b07a9101084f8ea