Fix Bug 369146 - Reading email advancing with "space" doesn't jump to next unread at end of current email

FIXED-IN: 5.4.0
BUG: 369146